--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Zipperdev",
+  "name": "만드는 것을 좋아하는 어린 개발자 Zipperdev",
   "icons": [
     {
       "src": "favicon.ico",
